# MCP-data-analyst

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: reviews.txt  sample_sales.csv
examples/: transcript.md
src/mcp_data_analyst/: __init__.py  agent.py  cli.py  embeddings.py  mcp_client.py  server.py  store.py  text_store.py
tests/: test_server_e2e.py  test_store.py  test_text.py
